--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,12 @@
-// SPDX-License-Identifier: AGPL-3.0-or-later
+image:https://img.shields.io/badge/license-PMPL--1.0-blue.svg[License,link="https://github.com/hyperpolymath/palimpsest-license"]
+// SPDX-License-Identifier: PMPL-1.0
 // SPDX-FileCopyrightText: 2025 Hyperpolymath
 
 = Echomesh
 
-image:https://img.shields.io/badge/license-AGPL--3.0-blue.svg[AGPL-3.0,link="https://www.gnu.org/licenses/agpl-3.0"] image:https://img.shields.io/badge/philosophy-Palimpsest-purple.svg[Palimpsest,link="https://github.com/hyperpolymath/palimpsest-licence"]
+
+
+
 :toc: auto
 :toclevels: 3
 
@@ -55,4 +58,4 @@ See link:ROADMAP.adoc[ROADMAP.adoc] for development phases.
 
 == License
 
-AGPL-3.0-or-later
+PMPL-1.0-or-later
